# infolyt

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  docs.yml  release.yml
crates/infolyt-cli/: Cargo.toml
crates/infolyt-cli/src/: main.rs
crates/infolyt-core/: Cargo.toml
crates/infolyt-core/src/: lib.rs
crates/infolyt-daemon/: Cargo.toml
crates/infolyt-db/: Cargo.toml
crates/infolyt-ipc/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md
