[package]
name        = "infolyt-cli"
description = "Command-line interface for Infolyt"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "infolyt"
path = "src/main.rs"

[dependencies]
infolyt-core   = { path = "../infolyt-core" }
infolyt-ipc    = { path = "../infolyt-ipc" }
clap.workspace          = true
serde.workspace         = true
serde_json.workspace    = true
anyhow.workspace        = true
tracing.workspace       = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace    = true
tempfile.workspace      = true