[package]
name        = "infolyt-core"
description = "Core engine — indexer, hasher, type detector, recommender"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
rayon.workspace     = true
walkdir.workspace   = true
ignore.workspace    = true
blake3.workspace    = true
twox-hash.workspace = true
infer.workspace     = true
serde.workspace     = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true

[dev-dependencies]
tempfile.workspace  = true