[package]
name        = "infolyt-db"
description = "Database schema, migrations, and typed query layer"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
sqlx.workspace      = true
serde.workspace     = true
serde_json.workspace = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
tokio.workspace     = true