[package]
name        = "infolyt-ipc"
description = "Shared JSON-RPC types for daemon ↔ frontend communication"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true